--- a/package.json
+++ b/package.json
@@ -30,17 +30,19 @@
         "highlight.js": "11.7.0",
         "lodash-es": "4.17.21",
         "luxon": "3.2.1",
+        "mrz": "^3.3.0",
+        "mrz-scan": "^1.2.0",
         "ng-apexcharts": "1.7.4",
         "ngx-quill": "20.0.1",
         "perfect-scrollbar": "1.5.5",
         "quill": "1.3.7",
         "rxjs": "7.8.0",
-        "swiper": "^9.1.1",
+        "swiper": "^8.4.6",
         "tslib": "2.4.1",
         "zone.js": "0.12.0"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "15.1.2",
+        "@angular-devkit/build-angular": "^15.2.4",
         "@angular/cli": "15.1.2",
         "@angular/compiler-cli": "15.1.1",
         "@tailwindcss/line-clamp": "0.4.2",
